--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #################
-## ACE-World Specific
+## Chickentide-World Specific
 #################
 Database/compiled/password.txt
 Database/compiled/*.sql
