--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Database/Chickentide-World"]
-	path = Database/Chickentide-World
+[submodule "Database/ACE-World-16PY"]
+	path = Database/ACE-World-16PY
 	url = https://github.com/LingradAC/Chickentide-World.git
